# Kita

./: .clang-format  .gitignore  CMakeLists.txt  vcpkg.json
Content/: imgui.ini  project.yaml
Content/Assets/Font/: Charset.txt
Content/Assets/Shader/: Annotation.slang  Common.slang  Shading.slang  Skybox.slang
Content/Assets/Texture/EditorIcon/: EditorIconAtlas_UV.json
Content/Config/: Engine.cfg
Engine/: CMakeLists.txt  main.cpp
Engine/Assets/: Asset.h  AssetsConfig.cpp  AssetsConfig.h  AssetsManager.cpp  AssetsManager.h  CMakeLists.txt  Material.cpp  Material.h  Mesh.cpp  Mesh.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h
Engine/Core/: A.h  Assert.h  CMakeLists.txt  HashUtils.cpp  HashUtils.h  Macros.cpp  Macros.h  Ranges.h  Trace.cpp  Trace.h  Traits.h  TypeDefs.h
Engine/Core/Concurrency/: ConcurrentQueue.h  ConcurrentSet.h
Engine/Core/Config/: ConfigManager.cpp  ConfigManager.h  IConfig.cpp  IConfig.h
Engine/Core/Container/: Array.h  Byte.h  Deque.h  Function.h  Map.h  Optional.h  Queue.h  Result.h  Set.h  Stack.h
Engine/Core/Event/: Callback.h
Engine/Core/FileSystem/: File.cpp  File.h  FileSystemError.h  InputFileStream.cpp  InputFileStream.h  OutputFileStream.cpp  OutputFileStream.h  Path.cpp  Path.h
Engine/Core/Logging/: Logger.cpp  Logger.hpp
Engine/Core/Memory/: Malloc.cpp  Malloc.h  SharedPtr.h  UniquePtr.h
Engine/Core/Performance/: ProfilerMark.h
Engine/Core/Reflection/: Any.cpp  Any.h  ArrayProxy.h  EnumString.h  Field.cpp  Field.h  MapProxy.h  MetaMark.h  ReflUtils.cpp  ReflUtils.h  TemplateAdapter.h  Type.cpp  Type.h  TypeRegistry.cpp  TypeRegistry.h
Engine/Core/Serialization/: InputArchive.cpp  InputArchive.h  OutputArchive.cpp  OutputArchive.h  Reader.cpp  Reader.h  SerializationError.cpp  SerializationError.h  Writer.cpp  Writer.h
Engine/Core/Serialization/INI/: INIInputArchive.cpp  INIInputArchive.h  INIOutputArchive.cpp  INIOutputArchive.h  INIReader.cpp  INIReader.h  INIWriter.cpp  INIWriter.h  inicpp.h
Engine/Core/Serialization/TOML/: TOMLInputArchive.cpp  TOMLInputArchive.h  TOMLOutputArchive.cpp  TOMLOutputArchive.h
Engine/Core/Serialization/YAML/: YAMLInputArchive.cpp  YAMLInputArchive.h  YAMLOutputArchive.cpp  YAMLOutputArchive.h  YAMLReader.cpp  YAMLReader.h  YAMLWriter.cpp  YAMLWriter.h
Engine/Core/Singleton/: Singleton.h
Engine/Core/String/: String.cpp  String.h  StringTraits.h  StringUtils.cpp  StringUtils.h  StringView.cpp  StringView.h  ToString.h
Engine/Core/TaskGraph/: NamedThreads.h  QueuedThread.cpp  QueuedThread.h  QueuedThreadPool.cpp  QueuedThreadPool.h  TaskGraph.cpp  TaskGraph.h  TaskGraphBoard.cpp  TaskGraphBoard.h  TaskHandle.cpp  TaskHandle.h  TaskNode.cpp  TaskNode.h  ThreadUtils.cpp  ThreadUtils.h
Engine/Editor/: CMakeLists.txt  EditorUI.cpp  EditorUI.h  EditorWindow.cpp  EditorWindow.h  EditorWindowManager.cpp  EditorWindowManager.h  MenuAction.cpp  MenuAction.h  MenuActionManager.cpp  MenuActionManager.h  Selection.cpp  Selection.h
Engine/Editor/Inspector/: Inspector.cpp  Inspector.h  MeshInspector.cpp  MeshInspector.h  ShaderInspector.cpp  ShaderInspector.h  TextureInspector.cpp  TextureInspector.h
Engine/Editor/Windows/: ContentBrowserWindow.cpp  ContentBrowserWindow.h  ImGuiDemoWindow.cpp  ImGuiDemoWindow.h  InspectorWindow.cpp  InspectorWindow.h  LoggingWindow.cpp  LoggingWindow.h  ViewportWindow.cpp  ViewportWindow.h
Engine/Input/: CMakeLists.txt  Input.cpp  Input.h  InputTicker.cpp  InputTicker.h
Engine/Math/: CMakeLists.txt  Color.cpp  Color.h  Vector.cpp  Vector.h
Engine/Object/: Actor.cpp  Actor.h  CMakeLists.txt  Component.cpp  Component.h  Object.cpp  Object.h  ObjectPtr.cpp  ObjectPtr.h  ObjectTable.cpp  ObjectTable.h  PersistentObject.cpp  PersistentObject.h
Engine/Project/: CMakeLists.txt  Project.cpp  Project.h
Engine/RHI/: Buffer.h  CMakeLists.txt  CommandBuffer.cpp  CommandBuffer.h  Commands.h  DescripotrSet.h  DescriptorSet.h  FrameBuffer.h  GfxCommandHelper.cpp  GfxCommandHelper.h  GfxContext.cpp  GfxContext.h  IRHIResource.h  IconFontHeader.h  ImGuiConfig.cpp  ImGuiConfig.h  Image.h  ImageView.cpp  ImageView.h  Pipeline.h  RHIConfig.cpp  RHIConfig.h  RHIEnums.h  RHIFormat.cpp  RHIFormat.h  RenderPass.h  ShaderModule.h  SurfaceWindow.cpp  SurfaceWindow.h  Sync.h
Engine/RHI/Vulkan/: Buffer_Vulkan.cpp  Buffer_Vulkan.h  CommandBuffer_Vulkan.cpp  CommandBuffer_Vulkan.h  DescriptorSet_Vulkan.cpp  DescriptorSet_Vulkan.h  FrameBuffer_Vulkan.cpp  FrameBuffer_Vulkan.h  GfxContext_Vulkan.cpp  GfxContext_Vulkan.h  ImageView_Vulkan.cpp  ImageView_Vulkan.h  Image_Vulkan.cpp  Image_Vulkan.h  Pipeline_Vulkan.cpp  Pipeline_Vulkan.h  RHIEnums_Vulkan.cpp  RHIEnums_Vulkan.h  RenderPass_Vulkan.cpp  RenderPass_Vulkan.h  ShaderModule_Vulkan.cpp  ShaderModule_Vulkan.h  SurfaceWindow_Vulkan.cpp  SurfaceWindow_Vulkan.h  Sync_Vulkan.cpp  Sync_Vulkan.h
Engine/Render/: CMakeLists.txt  RHIResourceRegistry.cpp  RHIResourceRegistry.h  RenderContext.cpp  RenderContext.h  RenderPassManager.cpp  RenderPassManager.h  RenderPipeline.cpp  RenderPipeline.h  RenderTarget.cpp  RenderTarget.h  RenderTicker.cpp  RenderTicker.h
Engine/Render/Pipeline/: DefaultRenderPipeline.cpp  DefaultRenderPipeline.h
Engine/World/: CMakeLists.txt  EngineLoop.cpp  EngineLoop.h  ITick.cpp  ITick.h  TickManager.cpp  TickManager.h
HeaderTool/: Cache.cs  CodeGenerator.cs  Config.cs  FileSelector.cs  HeaderTool.csproj  HeaderTool.py  Program.cs
Scripts/: FindAllCharacters.py  PackAtlas.py
